--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,8 @@ jobs:
       - name: Build release
         uses: actions-rs/cargo@v1
         with:
-          command: build --release --locked
+          command: build 
+          args: --release --locked
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
