--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -12,14 +12,14 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-latest,
-          - macos-10.15,
-          - ubuntu-16.04,
-          - ubuntu-18.04,
-          - ubuntu-20.04,
-          - ubuntu-latest,
-          - windows-latest,
-          - windows-2019,
+          - macos-latest
+          - macos-10.15
+          - ubuntu-16.04
+          - ubuntu-18.04
+          - ubuntu-20.04
+          - ubuntu-latest
+          - windows-latest
+          - windows-2019
 
     steps:
       - uses: actions/checkout@v2
