--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -11,15 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:
-          - macos-latest
-          - macos-10.15
-          - ubuntu-16.04
-          - ubuntu-18.04
-          - ubuntu-20.04
-          - ubuntu-latest
-          - windows-latest
-          - windows-2019
+        os: [macos-latest, macos-10.15, ubuntu-latest, ubuntu-18.04, windows-latest]
 
     steps:
       - uses: actions/checkout@v2
