:green_heart: #7 update python-release

--- a/.github/workflows/python-release.yaml
+++ b/.github/workflows/python-release.yaml
@@ -1,9 +1,9 @@
 name: Python package Release
 
-on:
-  push:
-    tags:
-      - python-v*
+on: [push]
+  #push:
+  #  tags:
+  #    - python-v*
 
 env:
   PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
       - name: Install dependencies
-        run: poetry install
+        run: cd packages/pyviewercloud && poetry install
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
@@ -118,7 +118,7 @@ jobs:
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
       - name: Install dependencies
-        run: poetry install
+        run: cd packages/pyviewercloud && poetry install
       - name: Build Python package
         run: poetry run maturin build --release --no-sdist --strip --interpreter python${{matrix.python_version}}
 
