--- a/.github/workflows/python-release.yaml
+++ b/.github/workflows/python-release.yaml
@@ -135,17 +135,17 @@ jobs:
       # https://stackoverflow.com/a/52481267/270334
       - name: Install wheels
         if:  matrix.os == 'windows-latest'
-        run: pip install --find-links=packages\pyviewercloud\target\wheels viewercloud
+        run: pip install --find-links=packages\pyviewercloud\target\wheels\pyviewercloud
 
       - name: Install wheels
         if:  matrix.os != 'windows-latest'
-        run: pip install packages/pyviewercloud/target/wheels/viewercloud*.whl
+        run: pip install packages/pyviewercloud/target/wheels/pyviewercloud*.whl
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: packages/pyviewercloud/target/wheels/viewercloud*.whl
+          files: packages/pyviewercloud/target/wheels/pyviewercloud*.whl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
