--- a/packages/pyviewercloud/pyproject.toml
+++ b/packages/pyviewercloud/pyproject.toml
@@ -28,7 +28,6 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 numpy = "^1.19.4"
-twine = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
@@ -37,10 +36,11 @@ black = "^20.8b1"
 maturin = "^0.8.3"
 setuptools-rust = "^0.11.5"
 importlib-metadata = "^2.0.0"
+twine = "^3.2.0"
 
-[build-system]
-requires = ["maturin>=0.8"]
-build-backend = "maturin"
+#[build-system]
+#requires = ["maturin>=0.8"]
+#build-backend = "maturin"
 
 [tool.black]
 line-length = 120
