--- a/.github/workflows/python-release.yaml
+++ b/.github/workflows/python-release.yaml
@@ -1,9 +1,9 @@
 name: Python package Release
 
-on: [push]
-  #push:
-  #  tags:
-  #    - python-v*
+on:
+  push:
+   tags:
+     - python-v*
 
 env:
   PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
@@ -33,11 +33,6 @@ jobs:
           command: clippy
           args: --all-targets --all-features
 
-      # - name: Test with cargo
-      #   uses: actions-rs/cargo@v1.0.1
-      #   with:
-      #     command: test
-      #     toolchain: nightly
 
   build:
     runs-on: ${{ matrix.os }}
@@ -45,7 +40,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
@@ -60,7 +55,7 @@ jobs:
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
       - name: Install dependencies
-        
+
         run: cd packages/pyviewercloud && poetry install
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
@@ -120,7 +115,7 @@ jobs:
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
       - name: Install dependencies
-        
+
         run: cd packages/pyviewercloud && poetry install
       - name: Build Python package
         working-directory: ./packages/pyviewercloud
@@ -151,7 +146,7 @@ jobs:
           files: packages/pyviewercloud/target/wheels/pyviewercloud*.whl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
 
       - name: PyPi publish
         working-directory: ./packages/pyviewercloud
